--- a/EcommDjangoProject/store/templates/store/base.html
+++ b/EcommDjangoProject/store/templates/store/base.html
@@ -12,13 +12,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
+	  <title> Happy Shopper </title>
+
+
+
         <!-- CSS -->
         
         <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
 
         <!-- JavaScript -->
@@ -26,21 +29,21 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 
-
-        <!-- JavaScript Bundle with Popper -->
+	<!-- JavaScript Popper -->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
+	
 
-	  <!-- Bootstrap Max CDN --> 
+	 <!-- Bootstrap Max CDN --> 
 
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    
+
 
 
     </head>
 
-    <title> Edenthought </title>
+    
 
 
     <nav class="navbar navbar-expand-lg bg-primary justify-content-center">
@@ -48,7 +51,7 @@
 
         <a class="navbar-brand main-heading text-white" href="{% url 'store' %}"> 
                 
-        &nbsp; &nbsp; Edenthought 
+        &nbsp; &nbsp; Happy Shopper
         
         </a>
 
@@ -87,17 +90,9 @@
                             <a class="dropdown-item" href="{% url 'store' %}"> All </a>
                         
                         </li>
-                        
-                        {% for category in all_categories %}
-                        
-                            <li>
-
-                                <a class="dropdown-item" href="{{category.get_absolute_url}}"> {{ category.name | capfirst }} </a>
-
-                            </li>
-
-                        {% endfor %}
-
+                    
+        
+                    
                     </ul>
 
                 </li>
@@ -108,49 +103,22 @@
 
 
         <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-
             
             <ul class="navbar-nav ms-auto">
 
-                {% if user.is_authenticated %}
 
-                    <li class="nav-item">
-                
-                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'dashboard' %}"> <i class="fa fa-home" aria-hidden="true"></i> &nbsp; Dashboard </a>
+                <li class="nav-item">
+            
+                    <a class="btn btn-alert navbar-btn text-white" type="button"  href="/"> Register </a>
 
-                    </li>
-
-                    {% else %}
-
-                    <li class="nav-item">
-                
-                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'register' %}"> Register </a>
-
-                    </li>
+                </li>
 
 
-                {% endif %}
+                <li class="nav-item">
 
-                    
-                {% if user.is_authenticated %}
+                    <a class="btn btn-alert navbar-btn text-white" type="button"  href="/"> Login </a>
 
-                    <li class="nav-item">
-                        
-
-                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user-logout' %}"> <i class="fa fa-sign-out" aria-hidden="true"></i> &nbsp; Logout </a>
-
-                    </li>
-
-
-                    {% else %}
-
-                        <li class="nav-item">
-
-                            <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'my-login' %}"> Login </a>
-
-                        </li>
-
-                {% endif %}
+                </li>
 
 
                 &nbsp; &nbsp; &nbsp;
@@ -158,39 +126,11 @@
 
                 <li class="nav-item">
 
-                    <a type="button" role="button" href="{% url 'cart-summary' %}" class="btn btn-outline-secondary"> 
+                    <a type="button" role="button" href="/" class="btn btn-outline-secondary"> 
                     
 
 
                         <i class="fa fa-shopping-cart" aria-hidden="true"> </i>
-
-                        &nbsp;
-
-                        <div id="cart-qty" class="d-inline-flex">
-
-
-                            {% with qty_amount=cart|length %}
-
-                                
-                                {% if qty_amount > 0 %}
-                            
-                                    {{ qty_amount }}
-
-
-                                    {% else %}
-
-                                        0
-
-
-                                {% endif %}
-
-
-
-                            {% endwith %}
-
-
-                        </div>
-                        
 
 
                     </a>
@@ -208,35 +148,6 @@
 
     </nav>
 
-    {% for message in messages %}
-
-        {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-
-            <h6 id="message-timer" class="alert alert-success text-center"> <i class="fa fa-sign-out" aria-hidden="true"></i> &nbsp; {{message}} </h6>
-
-
-        {% endif %}
-
-        
-        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-
-            <h6 id="message-timer" class="alert alert-danger text-center"> <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> &nbsp; {{message}} </h6>
-
-        {% endif %}
-
-
-
-        {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
-
-            <h6 id="message-timer" class="alert alert-success text-center"> <i class="fa fa-check-circle" aria-hidden="true"></i> &nbsp; {{message}} </h6>
-
-        {% endif %}
-
-
-    {% endfor %}
-
-
-
 
     <body>
 
@@ -246,6 +157,9 @@
         
 
 
+
+
+
             
         {% endblock %}
     
@@ -253,9 +167,6 @@
 
 
     </body>
-
-
-    <script src="{% static 'js/app.js' %}"></script>
 
 
 </html>
