--- a/EcommDjangoProject/store/templates/store/base.html
+++ b/EcommDjangoProject/store/templates/store/base.html
@@ -90,7 +90,16 @@
                             <a class="dropdown-item" href="{% url 'store' %}"> All </a>
                         
                         </li>
-                    
+                        
+                        {% for category in all_categories %}
+
+                            <li>
+
+                                <a class="dropdown-item" href=""> {{ category.name }} </a>
+
+                            </li>
+
+                        {% endfor %}
         
                     
                     </ul>
