--- a/EcommDjangoProject/store/templates/store/base.html
+++ b/EcommDjangoProject/store/templates/store/base.html
@@ -95,7 +95,7 @@
 
                             <li>
 
-                                <a class="dropdown-item" href=""> {{ category.name }} </a>
+                                <a class="dropdown-item" href="{{ category.get_absolute_url }}"> {{ category.name }} </a>
 
                             </li>
 
