--- a/EcommDjangoProject/store/templates/store/product-info.html
+++ b/EcommDjangoProject/store/templates/store/product-info.html
@@ -118,7 +118,9 @@
 
             success: function(json){
 
-                console.log(json)
+                //console.log(json)
+
+                document.getElementById("cart-qty").textContent = json.qty
 
             },
 
