--- a/EcommDjangoProject/cart/templates/cart/cart-summary.html
+++ b/EcommDjangoProject/cart/templates/cart/cart-summary.html
@@ -1,3 +1,4 @@
+
 {% include "store/base.html" %}
 
 
@@ -5,8 +6,8 @@
 
 {% load mathfilters %}
 
-{% block content %}
 
+{% block content %}
 
 <main class="pt-5">
     
@@ -16,25 +17,27 @@
 
 	    <hr>
 
+      <!-- LP -->
+
       {% for item in cart %}
 
       {% with product=item.product %}
 
-      
+
       <br>
 
       <div class="row mb-4 border product-item">
         
         <div class="col-md-3 col-lg-2 order-md-first bg-light">
         
-            <img class="img-fluid mx-auto d-block" width="200px" alt="Responsive image" src="{{product.image.url}}"> 
+            <img class="img-fluid mx-auto d-block" width="200px" alt="Responsive image" src="{{product.image.url}}">
         
         </div>
 
         
         <div class="col-md-9 col-lg-10 ps-md-3 ps-lg-10">
           
-          <a href="{{product.get_absolute_url}}" class="text-info text-decoration-none"> <!-- Product get absolute url -->
+          <a href="{{product.get_absolute_url}}" class="text-info text-decoration-none"> 
           
             <h1 class="h5 pt-2"> {{product.title}} </h1>
           
@@ -64,7 +67,7 @@
 
                   &nbsp; 
                   
-                  <select id="">
+                  <select id="select{{product.id}}">
                   
                     <option selected>
                   
@@ -84,7 +87,7 @@
                   
                   <br> <br>
 
-                  <button type="button" id="update-button"
+                  <button type="button" data-index="{{product.id}}"
                     class="btn btn-primary btn-sm update-button">
                     Update
                   
@@ -92,7 +95,7 @@
                   
                   &nbsp;
 
-                  <button type="button" id="delete-button"
+                  <button type="button" data-index="{{product.id}}"
                     class="btn btn-danger btn-sm delete-button">
                     Delete
         
@@ -110,19 +113,24 @@
         </div>
       
     </div>
-
+    
     {% endwith %}
-
+    
     {% endfor %}
-      
+
+
+    <!-- LP -->
 
 
       <div class="col-12 text-end">
  
-        <div class="h6 fw-bold"> Sub total: $ <div id="total" class="d-inline-flex"> {{cart.get_total}} </div></div>
- 
+        <div class="h6 fw-bold"> Total price: $ <div id="total" class="d-inline-flex"> {{cart.get_total}} </div></div>
+
+        <br>
+
+        <a href="" class="btn btn-primary my-2"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> &nbsp; Proceed to checkout </a>
+        
       </div>
- 
 
     </div>
   
@@ -130,9 +138,101 @@
 
     <br>
 
-
  </main>
 
+ <script>
+
+  // Delete button
+
+    $(document).on('click', '.delete-button', function(e){
+
+      e.preventDefault();
+
+      $.ajax({
+
+          type: 'POST',
+          url: '{% url "cart-delete" %}',
+          data: {
+
+              product_id: $(this).data('index'),
+              csrfmiddlewaretoken: "{{csrf_token}}",
+              action: 'post'
+
+          },
+
+          success: function(json){
+
+              //console.log(json)
+
+              location.reload(true);
+              
+
+              document.getElementById("cart-qty").textContent = json.qty
+
+              document.getElementById("total").textContent = json.total
+
+
+          },
+
+          error: function(xhr, errmsg, err){
+
+
+          }
+
+      });
+
+
+  })
+
+
+  // Update button
+
+  $(document).on('click', '.update-button', function(e){
+
+    e.preventDefault();
+
+    var theproductid = $(this).data('index');
+
+    $.ajax({
+
+        type: 'POST',
+        url: '{% url "cart-update" %}',
+        data: {
+
+            product_id: $(this).data('index'),
+            product_quantity: $('#select' + theproductid + ' option:selected').text(),
+            csrfmiddlewaretoken: "{{csrf_token}}",
+            action: 'post'
+
+        },
+
+        success: function(json){
+
+            //console.log(json)
+
+            location.reload(true);
+            
+
+            document.getElementById("cart-qty").textContent = json.qty
+
+            document.getElementById("total").textContent = json.total
+
+
+        },
+
+        error: function(xhr, errmsg, err){
+
+
+        }
+
+    });
+
+
+})
+
+
+
+ </script>
 
 
 {% endblock %}
