--- a/EcommDjangoProject/account/templates/account/delete-account.html
+++ b/EcommDjangoProject/account/templates/account/delete-account.html
@@ -22,24 +22,20 @@
 
         <div class="container bg-white shadow-md p-5 form-layout">
 
-            <h3> Login to your account </h3>
+            <h3> Account deletion </h3>
 
-            <br>
-            <br>
+            <hr>
 
             <form method="POST" autocomplete="off">
 
                 {% csrf_token %}
 
-                {{form.username|as_crispy_field}}
+                <p> Are you sure that you want to delete your account? </p>
 
-                <br> <br>
+                <br>
+                <br>
 
-                {{form.password|as_crispy_field}}
-
-                <br> <br>
-
-                <button type="submit" class="btn btn-secondary btn-lg w-100 btn-block p-2"> &nbsp; Login </button>
+                <button type="submit" class="btn btn-danger btn-lg w-100 btn-block p-2"> &nbsp; Delete your account </button>
 
 
             </form>
