UI UX on login and resgister

--- a/EcommDjangoProject/account/templates/account/dashboard.html
+++ b/EcommDjangoProject/account/templates/account/dashboard.html
@@ -44,6 +44,8 @@
 
         <hr>
 
+        <p> Track all of your orders here. </p>
+
         <a class="btn btn-primary navbar-btn text-white" type="button"  href="{% url 'user-logout' %}"> My orders </a>
 
     </div>
@@ -56,11 +58,11 @@
 
         <hr>
 
+        <p> Update or delete your account. </p>
+
         <a class="btn btn-primary navbar-btn text-white" type="button"  href="{% url 'profile-management' %}"> Profile management </a>
 
         <br> <br>
-
-        <a class="btn btn-danger navbar-btn text-white" type="button"  href="{% url 'user-logout' %}"> Logout </a>
 
     </div>
 
