--- a/EcommDjangoProject/account/templates/account/my-login.html
+++ b/EcommDjangoProject/account/templates/account/my-login.html
@@ -24,7 +24,8 @@
 
             <h3> Login to your account </h3>
 
-            <br>
+            <hr>
+
             <br>
 
             <form method="POST" autocomplete="off">
@@ -33,14 +34,25 @@
 
                 {{form.username|as_crispy_field}}
 
-                <br> <br>
+                <br>
 
                 {{form.password|as_crispy_field}}
 
+                <br>
+
+                <button type="submit" class="btn btn-primary navbar-btn text-white w-100 p-2"> <i class="fa fa-sign-in" aria-hidden="true"></i> &nbsp; Login </button>
+
                 <br> <br>
 
-                <button type="submit" class="btn btn-secondary btn-lg w-100 btn-block p-2"> &nbsp; Login </button>
+                <div class="text-center">
 
+                    <a href="{% url 'register' %}"> Don't have an account? </a>
+
+                    <br> <br>
+
+                    <a href="{% url 'my-login' %}"> Forgotten your password? </a>
+
+                </div>
 
             </form>
 
