--- a/EcommDjangoProject/account/templates/account/profile-management.html
+++ b/EcommDjangoProject/account/templates/account/profile-management.html
@@ -22,7 +22,17 @@
 
         <div class="container bg-white shadow-md p-5 form-layout">
 
-            <h3> Update your account </h3>
+            <h3> <i class="fa fa-user" aria-hidden="true"></i> &nbsp; Profile management </h3>
+
+            <hr>
+
+        </div>
+
+        <br>
+
+        <div class="container bg-white shadow-md p-5 form-layout">
+
+            <h4> Update your account </h4>
 
             <hr>
 
@@ -40,7 +50,7 @@
 
                 <br> <br>
 
-                <button type="submit" class="btn btn-secondary btn-lg w-100 btn-block p-2"> &nbsp; Update your account </button>
+                <button type="submit" class="btn btn-primary navbar-btn text-white"> &nbsp; Update your account </button>
 
 
             </form>
@@ -53,13 +63,12 @@
 
         <div class="container bg-white shadow-md p-5 form-layout">
 
-            <h3> Delete your account </h3>
+            <h4> Delete your account </h4>
 
             <hr>
 
             <p> Proceed if you wish to delete your account. </p>
 
-            <br>
             <br>
 
             <a class="btn btn-primary navbar-btn text-white" type="button"  href="{% url 'delete-account' %}"> Delete your account </a>
