--- a/EcommDjangoProject/account/templates/account/my-login.html
+++ b/EcommDjangoProject/account/templates/account/my-login.html
@@ -50,7 +50,7 @@
 
                     <br> <br>
 
-                    <a href="{% url 'my-login' %}"> Forgotten your password? </a>
+                    <a href="{% url 'reset_password' %}"> Forgotten your password? </a>
 
                 </div>
 
