setting up shipping address page

--- a/EcommDjangoProject/store/templates/store/base.html
+++ b/EcommDjangoProject/store/templates/store/base.html
@@ -121,7 +121,7 @@
 
                     <li class="nav-item">
                 
-                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'dashboard' %}"> Dashboard </a>
+                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'dashboard' %}"> <i class="fa fa-home" aria-hidden="true"></i> &nbsp; Dashboard </a>
 
                     </li>
 
@@ -140,7 +140,7 @@
 
                     <li class="nav-item">
 
-                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user-logout' %}"> Logout </a>
+                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user-logout' %}"> <i class="fa fa-sign-out" aria-hidden="true"></i> &nbsp; Logout </a>
 
                     </li>
 
@@ -208,6 +208,33 @@
 
     </nav>
 
+    {% for message in messages %}
+
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+
+            <h6 id="message-timer" class="alert alert-success text-center"> <i class="fa fa-sign-out" aria-hidden="true"></i> &nbsp; {{message}} </h6>
+
+
+        {% endif %}
+
+        
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+
+            <h6 id="message-timer" class="alert alert-danger text-center"> <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> &nbsp; {{message}} </h6>
+
+        {% endif %}
+
+
+
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+
+            <h6 id="message-timer" class="alert alert-success text-center"> <i class="fa fa-check-circle" aria-hidden="true"></i> &nbsp; {{message}} </h6>
+
+        {% endif %}
+
+
+    {% endfor %}
+
 
     <body>
 
@@ -227,6 +254,9 @@
 
 
     </body>
+
+
+    <script src="{% static 'js/app.js' %}"></script>
 
 
 </html>
