--- a/EcommDjangoProject/cart/templates/cart/cart-summary.html
+++ b/EcommDjangoProject/cart/templates/cart/cart-summary.html
@@ -30,16 +30,16 @@
         
         <div class="col-md-3 col-lg-2 order-md-first bg-light">
         
-            <img class="img-fluid mx-auto d-block" width="200px" alt="Responsive image" src="{{product.image.url}}">
+            <img class="img-fluid mx-auto d-block" width="200px" alt="Responsive image" src="{{product.image.url}}"> <!-- Product image -->
         
         </div>
 
         
         <div class="col-md-9 col-lg-10 ps-md-3 ps-lg-10">
           
-          <a href="{{product.get_absolute_url}}" class="text-info text-decoration-none"> 
+          <a href="{{product.get_absolute_url}}" class="text-info text-decoration-none"> <!-- Product get absolute url -->
           
-            <h1 class="h5 pt-2"> {{product.title}} </h1>
+            <h1 class="h5 pt-2"> {{product.title}}<!-- Product title --> </h1>
           
           </a>
           
@@ -128,7 +128,7 @@
 
         <br>
 
-        <a href="" class="btn btn-primary my-2"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> &nbsp; Proceed to checkout </a>
+        <a href="{% url 'checkout' %}" class="btn btn-primary my-2"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> &nbsp; Proceed to checkout </a>
         
       </div>
 
@@ -164,7 +164,7 @@
 
               //console.log(json)
 
-              location.reload(true);
+              location.reload();
               
 
               document.getElementById("cart-qty").textContent = json.qty
@@ -210,7 +210,7 @@
 
             //console.log(json)
 
-            location.reload(true);
+            location.reload();
             
 
             document.getElementById("cart-qty").textContent = json.qty
