payment templates updated

--- a/EcommDjangoProject/payment/templates/payment/checkout.html
+++ b/EcommDjangoProject/payment/templates/payment/checkout.html
@@ -110,11 +110,6 @@
 
                 <br>
 
-
-
-               <!-- <button id="complete-order" class="btn btn-primary navbar-btn text-white"> &nbsp; Complete order </button>
-               -->
-
                 <br>
 
 
@@ -152,10 +147,8 @@
     // PayPal Script
 
     const paypalButtonsComponent = paypal.Buttons({
-        // optional styling for buttons
-        // https://developer.paypal.com/docs/checkout/standard/customize/buttons-style-guide/
         style: {
-          color: "blue",
+          color: "gold",
           shape: "pill",
           layout: "vertical",
         },
@@ -189,13 +182,9 @@
                             }
 
 
-
                         });
 
-
-
                         return order_verified;
-
 
                     }
 
@@ -389,7 +378,7 @@
 
     // Complete checkout
     
-    
+    /*
     $(document).on('submit',  function(e){
 
         e.preventDefault();
@@ -435,8 +424,7 @@
 
 
     })
-    
-    
+    */
 
 
    </script>
