adding to readme

--- a/EcommDjangoProject/store/templates/store/store.html
+++ b/EcommDjangoProject/store/templates/store/store.html
@@ -24,7 +24,7 @@
 
                 <p class="lead text-muted">
 
-                Browse our extensive collection.
+                Browse our extensive collection below.
 
                 </p>
 
