--- a/EcommDjangoProject/account/templates/account/dashboard.html
+++ b/EcommDjangoProject/account/templates/account/dashboard.html
@@ -46,7 +46,7 @@
 
         <p> Track all of your orders here. </p>
 
-        <a class="btn btn-primary navbar-btn text-white" type="button"  href="{% url 'user-logout' %}"> My orders </a>
+        <a class="btn btn-primary navbar-btn text-white" type="button"  href="{% url 'track-orders' %}"> My orders </a>
 
     </div>
 
